cmake_minimum_required(VERSION 3.26)
project(cv12)

set(CMAKE_CXX_STANDARD 17)

add_executable(cv12 main.cpp
        Calculator.cpp
        Calculator.h
        Calculator.h
        Operation.cpp
        Operation.h
        Operation.h
        Adding.cpp
        Adding.h
        Adding.h
        Multiplying.cpp
        Multiplying.h
        Multiplying.h)
